--- a/styles.css
+++ b/styles.css
@@ -86,14 +86,35 @@ body {
 
 #orange {
 	color: var(--bright-orange);
+	transition: all 300ms ease;
+}
+
+#orange:hover {
+	border: 2px solid white;
+	background-color: var(--bright-orange);
+	color: white;
 }
 
 #cyan {
 	color: var(--dark-cyan);
+	transition: all 300ms ease;
+}
+
+#cyan:hover {
+	border: 2px solid white;
+	background-color: var(--dark-cyan);
+	color: white;
 }
 
 #dark-cyan {
 	color: var(--very-dark-cyan);
+	transition: all 300ms ease;
+}
+
+#dark-cyan:hover {
+	border: 2px solid white;
+	background-color: var(--very-dark-cyan);
+	color: white;
 }
 
 @media screen and (min-width: 768px) {
